@@ -629,7 +629,6 @@ struct GTY(())	lang_type	 {
   tree dataptr_type;
   tree span;
   tree base_decl[2];
-  tree nontarget_type;
 };
 
 struct GTY(()) lang_decl {
