@@ -1,3 +1,8 @@
+2009-09-16  Michael Matz  <matz@suse.de>
+
+	PR fortran/41212
+	* gfortran.dg/pr41212.f90: New test.
+
 2009-09-16  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* gnat.dg/alignment9.adb: New test.
